Fixing dark mode bugs

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@ $border-dark: #bbb;
 
 #app {
     width: 100%;
-    box-sizing: border-box;
+    height: 100%;
 }
 
 img {
