--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,9 @@
     margin: 0;
     border: 0;
 }
+
+html, body {
+    max-height: 100%;
+    margin: 0;
+    padding: 0;
+  }
